@@ -5,17 +5,22 @@ import com.aman.blogapp.exceptions.ResourceNotFoundException;
 import com.aman.blogapp.payload.UserDto;
 import com.aman.blogapp.repositories.UserRepo;
 import com.aman.blogapp.services.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
 
-    @Autowired
-    private UserRepo userRepo;
+    private final UserRepo userRepo;
+    private final ModelMapper modelMapper;
+
+
+    public UserServiceImpl(UserRepo userRepo, ModelMapper modelMapper){
+        this.userRepo =userRepo;
+        this.modelMapper = modelMapper;
+    }
 
     @Override
     public UserDto registerNewUser(UserDto user) {
@@ -26,20 +31,19 @@ public class UserServiceImpl implements UserService {
     public UserDto createUser(UserDto userDto) {
         User user=this.dtoToUser(userDto);
        User  savedUser = this.userRepo.save(user);
-       return(this.userToDto(savedUser));
+       return this.userToDto(savedUser);
     }
 
     @Override
     public UserDto updateUser(UserDto userDto, Integer userId) {
+        // update this method to update the given payload and rest take from database
         User user=this.userRepo.findById(userId).orElseThrow(()-> new ResourceNotFoundException("User","Id",userId));
         user.setName(userDto.getName());
         user.setEmail(userDto.getEmail());
         user.setPassword(userDto.getPassword());
         user.setAbout(userDto.getAbout());
         User updatedUser=this.userRepo.save(user);
-        UserDto userDto1=this.userToDto(updatedUser);
-
-        return userDto1;
+        return this.userToDto(updatedUser);
     }
 
     @Override
@@ -53,9 +57,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<UserDto> getAllUsers() {
         List<User> users = this.userRepo.findAll();
-        List<UserDto> userDtos = users.stream().map(user -> this.userToDto(user)).collect(Collectors.toList());
-
-        return userDtos;
+        return users.stream().map(this::userToDto).toList();
     }
 
     @Override
@@ -68,24 +70,10 @@ public class UserServiceImpl implements UserService {
 
 
     public User dtoToUser(UserDto userDto) {
-//        User user = this.modelMapper.map(userDto, User.class);
-        User user=new User();
-         user.setId(userDto.getId());
-         user.setName(userDto.getName());
-         user.setEmail(userDto.getEmail());
-         user.setAbout(userDto.getAbout());
-         user.setPassword(userDto.getPassword());
-        return user;
+        return this.modelMapper.map(userDto, User.class);
     }
 
     public UserDto userToDto(User user) {
-//        UserDto userDto = this.modelMapper.map(user, UserDto.class);
-        UserDto userDto = new UserDto();
-        userDto.setId(user.getId());
-        userDto.setName(user.getName());
-        userDto.setEmail(user.getEmail());
-        userDto.setAbout(user.getAbout());
-        userDto.setPassword(user.getPassword());
-        return userDto;
+        return this.modelMapper.map(user, UserDto.class);
     }
 }
